--- a/views/base.ejs
+++ b/views/base.ejs
@@ -39,7 +39,7 @@
                     <i class="fas fa-search fa-3x faa-horizontal animated icon"></i>
                     <input type="text" id="myInput" onkeyup="myFunction()" placeholder="Search for Countries.." title="Type in a name">
                 </div>
-                <h1 class="item-1 heading">Last Updated: <%= new Date(AllData.globalRequest.updated) %> <span></span></h1>
+                <h1 class="item-1 heading">Last Updated: <%= new Date(parseInt(AllData.globalRequest.updated)) %> <span></span></h1>
             </div>
             <table style="margin-top: 0;" id="myTable" class="item">
                 <tr>
